--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,45 +1,43 @@
 @import '../utils/mixins';
 
+// Team section layout
+
 .team {
-    background-color: $backgroundLightGray;
-}
+  background-color: $backgroundLightGray;
 
-.team__card {
-  max-width: 270px;
-  background-color: $colorSecondary;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
+  &__card {
+    max-width: 270px;
+    background-color: $colorSecondary;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+  }
 
-// Bottom box
-
-.team__box {
+  &__box {
     padding: 30px 0;
+  }
 
-    &__name {
-        font-weight: 500;
-        font-size: 16px;
-        letter-spacing: 0.03em;
-        line-height: 1.2;
-        text-align: center;
-    }
+  &__name  {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.2;
+    text-align: center;
+  }
 
-    &__profession {
-        font-size: 16px;
-        letter-spacing: 0.03em;
-        line-height: 1.2;
-        color: $colorSmallText;
-        margin-top: 10px;
-        margin-bottom: 16px;
-        text-align: center;
-    }
+  &__profession {
+    @extend .team__profession;
+    font-weight: 400px;
+    color: $colorSmallText;
+    margin-top: 10px;
+    margin-bottom: 16px;
+    text-align: center
+  }
 
-    &__socials {
-        gap: 10px;
-        display: flex;
-        justify-content: center;
-    }
+  &__socials {
+    gap: 10px;
+    display: flex;
+    justify-content: center
+  }
 }
 
 // Socials
